2006-07-10  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend_oss.c: Set preferred buffer size. Fixed open
	mode.

2006-07-05  Sven Panne  <sven.panne@aedion.de>

	* src/al_mixer.c, src/al_types.h, src/alc/alc_context.c,
	src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_arts.c,
	src/backends/alc_backend_esd.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_null.c, src/backends/alc_backend_oss.c,
	src/backends/alc_backend_sdl.c, src/backends/alc_backend_wave.c,
	src/extensions/al_ext_loki.c: Make the backend details abstract, so only
	device handling and the backends themselves know the details.

	* src/backends/alc_backend_wave.c: Open the output file without any race
	conditions or security risks. General cleanup. Fixed endianess, sample
	size and WAVE header issues.

2006-07-01  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Complete MorphOS support removal. ;-)

2006-06-30  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend.c: Changed the fallback device logic
	slightly, so it is always "native" now. This is turn is an alias for
	"alsa"/"oss"/"dmedia"/"null" now, whichever is the first one supported.

	* CMakeLists.txt, configure.ac, src/Makefile.am, src/al_mutexlib.c,
	src/al_mutexlib.h, src/al_threadlib.c, src/al_threadlib.h,
	src/config/al_config.c: Removed MorphOS support.

	* src/backends/alc_backend_morphos.c: Removed.

	* src/backends/alc_backend_null.c, src/backends/alc_backend_wave.c:
	Cleanup. Removed sleeping. Note that the WAVE backend still has
	portability issues and is not const-correct.

	* src/backends/alc_backend_alsa.c: Added some debug output.

	* src/backends/alc_backend_sdl.c: Signal that we do not handle getting
	and setting the volume in the SDL backend.

	* src/backends/alc_backend_oss.c: Use int constant when int is needed.

2006-06-29  Prakash Punnoor <prakash@punnoor.de>
